--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.org.java</groupId>
 	<artifactId>SpringbootRestApplication</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>SpringbootRestApplication</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
@@ -75,7 +76,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>Springboot-java-application</finalName>
+		<finalName>springboot-java-application</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
