--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 #spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
-#spring.profiles.active=proud
+#spring.profiles.active=test
